--- a/index.html
+++ b/index.html
@@ -17,4 +17,4 @@
     <register-form></register-form>
 
 
-    <script src="./app.js" type="module"></script>
+    <script src="./js/app.js" type="module"></script>
