--- a/index.html
+++ b/index.html
@@ -4,7 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+<!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/8.2.0/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.2.0/firebase-firestore.js"></script>
+
+
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+
+<script>
+  // Your web app's Firebase configuration
+  var firebaseConfig = {
+    apiKey: "AIzaSyDw55gxAPWRiDcg-kxtXgMQ6AHBpdhXaVI",
+    authDomain: "ci53-e1a92.firebaseapp.com",
+    projectId: "ci53-e1a92",
+    storageBucket: "ci53-e1a92.appspot.com",
+    messagingSenderId: "168049659499",
+    appId: "1:168049659499:web:8b99161ddb1d5cc0556b2e"
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+</script>
 </head>
 <body style="background-color: rgb(128, 0, 255);">
     <!-- <form id="register-form">
