--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 <!-- The core Firebase JS SDK is always required and must be listed first -->
 <script src="https://www.gstatic.com/firebasejs/8.2.0/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.2.0/firebase-firestore.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.0.0/crypto-js.min.js" integrity="sha512-nOQuvD9nKirvxDdvQ9OMqe2dgapbPB7vYAMrzJihw5m+aNcf0dX53m6YxM4LgA9u8e9eg9QX+/+mPu8kCNpV2A==" crossorigin="anonymous"></script>
+
+
 
 
 <!-- TODO: Add SDKs for Firebase products that you want to use
@@ -26,6 +29,8 @@
   // Initialize Firebase
   firebase.initializeApp(firebaseConfig);
 </script>
+<script src="//unpkg.com/navigo@6"></script>
+
 </head>
 <body style="background-color: rgb(128, 0, 255);">
     <!-- <form id="register-form">
@@ -35,7 +40,7 @@
     <input-wrapper Label = "Password Confirmation" type="password" error="" value=""></input-wrapper>
     <button>Register</button>
     </form> -->
-    <register-form></register-form>
+    <login-form></login-form>
 
 
     <script src="./js/app.js" type="module"></script>
