--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <script src="//unpkg.com/navigo@6"></script>
 
 </head>
-<body style=" margin: 0px; background-color: rgb(128, 0, 255);">
+<body style=" margin: 0px; background-color: black; ">
     
     <!-- <login-form></login-form> -->
     <div id="app">
