--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@
 </script>
 <script src="//unpkg.com/navigo@6"></script>
 
-</head>
-<body style=" margin: 0px; background-color: black; ">
+</head> 
+<body style=" margin: 0px; background-color: #923cb5;
+background-image: linear-gradient(147deg, #923cb5 0%, #000000 74%); ">
     
     <!-- <login-form></login-form> -->
     <div id="app">
